--- a/pages/register/register.css
+++ b/pages/register/register.css
@@ -1,5 +1,9 @@
+* {
+    margin: 0;
+    text-decoration: none;
+    
+}
 body {
-  margin: 0;
   background: rgb(67, 68, 68);
   height: 100vh;
 }
@@ -19,4 +23,3 @@ input {
   border: none;
   border-radius: 5px;
 }
-
