--- a/global.css
+++ b/global.css
@@ -1,5 +1,27 @@
+.loading {
+  background: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  width: 100%;
+  height: 100%;
+}
+
+.loading label {
+  font-size: 24px;
+}
+
+.centralize {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.form-field {
+  margin-bottom: 10px;
+}
+
 button {
   padding: 10px;
+  margin-bottom: 10px;
   width: -webkit-fill-available;
   cursor: pointer;
   border-radius: 5px;
@@ -10,6 +32,11 @@ button:active {
 }
 button[disabled] {
   opacity: 0.8;
+}
+
+input {
+  padding: 10px;
+  width: -webkit-fill-available;
 }
 
 .clear {
