logout e auth-guad

--- a/global.css
+++ b/global.css
@@ -1,3 +1,11 @@
+* {
+  margin: 0;
+  text-decoration: none;
+}
+
+body {
+  background: rgb(67, 68, 68);
+}
 .loading {
   background: rgba(0, 0, 0, 0.5);
   position: fixed;
