--- a/global.css
+++ b/global.css
@@ -41,6 +41,25 @@ button[disabled] {
   opacity: 0.8;
 }
 
+
+button.fab {
+  width: 54px;
+  height: 54px;
+  border-radius: 50px;
+  border: none;
+  font-size: 24px;
+  box-shadow: 2px 2px 2px gray;
+}
+button.fab.fixed {
+  position: fixed;
+}
+button.fab.bottom {
+  bottom: 32px;
+}
+button.fab.right {
+  right: 32px;
+}
+
 input {
   padding: 10px;
   width: -webkit-fill-available;
