--- a/global.css
+++ b/global.css
@@ -14,6 +14,13 @@ body {
   top: 0;
 }
 
+header {
+  text-align: right;
+}
+header button {
+  width: auto;
+}
+
 .loading label {
   font-size: 24px;
 }
@@ -28,13 +35,14 @@ body {
   margin-bottom: 10px;
 }
 
-button {
+button, input, select {
   padding: 10px;
   margin-bottom: 10px;
   width: -webkit-fill-available;
   border-radius: 5px;
   margin-bottom: 10px;
 }
+
 button:active {
   opacity: 0.8;
 }
@@ -61,9 +69,10 @@ button.fab.right {
   right: 32px;
 }
 
-input {
-  padding: 10px;
-  width: -webkit-fill-available;
+
+
+input[type="radio"]{
+  width: auto;
 }
 
 .clear {
