--- a/global.css
+++ b/global.css
@@ -92,6 +92,11 @@ input[type="radio"]{
   border: 1px solid white;
 }
 
+.outline.danger {
+color: red;
+border-color: red;
+}
+
 .error {
   background: rgb(233, 146, 146);
   color: white;
